- SF Patch #1676370 Bug #1648070 Statistics does not use navbar="admin"
- Fix for SF Bug #1690573 dspace-admin, edit item trailing white spaces

(Stuart Lewis)
- SF Patch #1670110 for SF Bug #1670106 Onebox and textarea fail when visibility set to workflow
- SF Patch #1628889 Improve file size descriptions in ItemTag
- SF Patch #1641678 [dspace]/bin scripts for import and export

(K. Nakagami)
- SF Patch #1591969 for SF bug #1583372 DCDate.toString returns invalid string
- SF Patch #1621889 for SF Bug #1606789 When collection is deleted, mapped item remains in community

(James Rutherford)
- SF Patch #1694943 for SF feature request #1691277 Importing: Workaround for ext3 subdirectory limitation

(Dorothea Salo)
- SF Patch #1557948 Link subjects and authors on item pages

(Graham Triggs)
- SF Patch #1688523 Bug fix - OAI harvest and Oracle
- SF Patch #1660752 Workaround Numeric/Integer handling in Oracle
- SF Patch #1665400 Oracle schema changes for CLOB columns

1.4.1 final
===========
(Tim Donohue)
- SF Patch #1609663 Include Windows CLASSPATH in dsrun.bat

(Claudia Juergen)
- SF Patch #1606703 for SF bug #1606435 Workflow text out of context

(Mark Diggory)
- SF Patch #1609468 Move w3c valid xhtml boiler image into local repository
- SF Patch #1605771 Remove uncessary Log4j Configuration in CheckerCommand
 
1.4.1 beta 2
============
(Ed Yu)
- SF Bug #1605635 NPE in Utils.java

(K. Nakagami)
- SF bug #1597504 Search result page shows shortened query string

(Scott Phillips)
- Manakin eperson.patch adds API methods for searching epeople & groups.

(Andrea Bollini)
- SF Patch #1597807 for SF bug #1597805 DIDL Crosswalk: wrong resource management

(Claudia Juergen)
- SF patch #1589930 for SF bug #1588625 Incorrect text on item mapper screen

(Scott Yeadon)
- SF bug #1596978 View unfinished submissions - collection empty
- SF bug #1596952 Collection Wizard create Template missing schema
- Fix bug in TableRow toString() method where NPE is thrown if tablename not set